fix closer in slideshow so its visible

--- a/css/component.css
+++ b/css/component.css
@@ -169,7 +169,7 @@
 .slideshow nav span {
 	position: fixed;
 	z-index: 1000;
-	color: #666;
+	color: #333;
 	text-align: center;
 	padding: 3%;
 	cursor: pointer;
@@ -191,7 +191,7 @@
 	top: 0;
 	right: 0;
 	padding: 0.5em 1em;
-	color: #666;
+	color: #333;
 }
 
 .icon:before,
